objects/GL_Account_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <picklist>
            <picklistValues>
                <fullName>WRITTENOFFAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERESTACCRUEDAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOANPAYMENTTRANSACTIONAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LOANPAYMENTREVERSALAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUNDTRANSACTIONAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRINCIPALSUBTRACTIONAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISBURSMENTTRANSACTIONAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APPLICATIONFEEAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOTALDISBURSMENTAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INTERESTCHARGEDAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHARGEAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMISSIONAMOUNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMMISIONAMORTIZATIONAMOUNT</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Code__c</fullName>
        <label>GL Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Product</label>
        <referenceTo>loan__Loan_Product__c</referenceTo>
        <relationshipLabel>GL Account Junctions</relationshipLabel>
        <relationshipName>GL_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GL Account Junction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount_Type__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Channel__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Loan_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Channel__c</field>
            <operation>equals</operation>
            <value>NOT_DIRECT</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_INT_ACCRUED_AMT</fullName>
        <columns>Amount_Type__c</columns>
        <columns>Transaction_Type__c</columns>
        <columns>Channel__c</columns>
        <columns>GL_Code__c</columns>
        <columns>Loan_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Amount_Type__c</field>
            <operation>equals</operation>
            <value>INTERESTCHARGEDAMOUNT</value>
        </filters>
        <filters>
            <field>Loan_Product__c</field>
            <operation>equals</operation>
            <value>Secured Loan Variable Rate</value>
        </filters>
        <label>All_INT_ACCRUED_AMT</label>
    </listViews>
    <nameField>
        <displayFormat>GLAJ-{0000}</displayFormat>
        <label>GL Account Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Account Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>